feat:added menu js

--- a/bootstrapt/mobile.css
+++ b/bootstrapt/mobile.css
@@ -48,6 +48,32 @@
         display: block;
         cursor: pointer;
     }
+    .mobile-menu{
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 250px;
+        height: 100%;
+        background: #333;
+        padding: 30px 20px;
+        font-size: 30px;
+        transform: translateX(-100%);
+        transition: 0.7s;
+    }
+
+    .mobile-menu.active{
+        transform: translateX(0%);
+
+    }
+    .mobile-menu li {
+        list-style: none;
+        margin: 20px;
+    }
+    
+    .mobile-menu li a{
+        color: #fff !important;
+    }
 
     .logo-part ul,
     .nav {
@@ -81,9 +107,7 @@
      
     }
 
-    .warranty .row .left{
-
-    }
+    
     .warranty .row .right{
         margin-top: 25px;
     }
