--- a/bootstrapt/mobile.css
+++ b/bootstrapt/mobile.css
@@ -125,8 +125,27 @@
 
 
 @media(max-width: 576px){
+    
     .title,
     .text{
         text-align: center;
+        padding: 0 7px;
+        /* width: 320px; */
+    }
+}
+@media(max-width: 576px){
+    .text-part{
+        background: rgb(108, 108, 207);
+    }
+}
+@media(max-width: 425px){
+    .container{
+        padding: 0;
+    }
+    
+    .text-part{
+        
+        
+        background: rgb(108, 108, 207);
     }
 }
